# NoWayOut

./: .gitignore  CMakeLists.txt  README.md  backend-main.cpp  backend.cpp  display-main.cpp  display.cpp  main.cpp  receiver.cpp  test.json
CMake/: FindTurboJPEG.cmake
config/: config.h
core/: CMakeLists.txt  config.h  core.h  engine.cpp  engine.h  frame_render.cpp  frame_render.h  game_logic.cpp  game_logic.h  gesture_capture.cpp  gesture_capture.h  network.cpp  network.h  util.h
core/backend/: engine.cpp  engine.h  frame_render.cpp  frame_render.h  game_logic.cpp  game_logic.h  gesture_capture.cpp  gesture_capture.h  network.cpp  network.h
core/graphics/: framebuffer.cpp  framebuffer.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  shader.cpp  shader.h
data/meshes/flying_horse/: flying_horse.mtl
data/meshes/primitives/: cone.mtl  cylinder.mtl
data/shaders/: ggx.frag  ggx.vert  shadow.vert
display/: CMakeLists.txt  display.cpp  display.h  display_state.h
util/: util.h
